correct alignment of picture

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 }
 section{
     text-align: center;
-    padding: 5rem;
+    padding: 1rem;
 }
 
 
@@ -23,6 +23,7 @@ header{
     border-radius: 50%;
     margin:0;
     padding: 0;
+    text-align: center;
 }
 
 p{
